# fxrates

./: README.md  pyproject.toml
fxrates/: main.py
