[tool.poetry]
name = "fxrates"
version = "0.1.0"
description = ""
authors = ["Travis Littlechilds <travislittlechilds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.15.4"
requests = "^2.28.2"
types-requests = "^2.28.11.13"
types-peewee = "^3.15.0.6"
pymysql = "^1.0.2"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
